tests/snapshots/snapshots__budget_react_hot_toast_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4172 tokens)

README.md
    28→## Features
    30→- 🔥 **Hot by default**
    31→- 🔩 **Easily Customizable**
    32→- ⏳ **Promise API** - _Automatic loader from a promise_
    33→- 🕊 **Lightweight** - _less than 5kb including styles_
    34→- ✅ **Accessible**
    35→- 🤯 **Headless Hooks** - _Create your own with [`useToaster()`](https://react-hot-toast.com/docs/use-toaster)_
    36→
    37→## Installation
    39→#### With pnpm
    41→```sh
    42→pnpm add react-hot-toast
    43→```
    44→
    45→#### With NPM
    47→```sh
    48→npm install react-hot-toast
    49→```
    50→
    51→## Getting Started
    53→Add the Toaster to your app first. It will take care of rendering all notifications emitted. Now you can trigger `toast()` from anywhere!
    54→
    55→```jsx
    56→import toast, { Toaster } from 'react-hot-toast';
    57→
    58→const notify = () => toast('Here is your toast.');
    59→
    60→const App = () => {
    61→  return (
    62→    <div>
    63→      <button onClick={notify}>Make me a toast</button>
    64→      <Toaster />
    65→    </div>
    66→  );
    67→};
    68→```
    69→
    70→## Documentation
    72→Find the full API reference on [official documentation](https://react-hot-toast.com/docs).

package.json
     2→  "name": "react-hot-toast",
     3→  "description": "Smoking hot React Notifications. Lightweight, customizable and beautiful by default.",
     4→  "version": "2.6.0",
     5→  "author": "Timo Lins",
     6→  "license": "MIT",
     7→  "repository": "timolins/react-hot-toast",
     8→  "keywords": [
    13→  ],
    14→  "main": "dist/index.js",
    15→  "types": "dist/index.d.ts",
    16→  "exports": {
    28→  },
    29→  "files": [
    33→  ],
    34→  "engines": {
    36→  },
    37→  "scripts": {
    44→  },
    45→  "husky": {
    49→  },
    50→  "prettier": {
    56→  },
    57→  "size-limit": [
    74→  ],
    75→  "devDependencies": {
    94→  },
    95→  "dependencies": {
    98→  },
    99→  "peerDependencies": {
   102→  },
   103→  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
   104→}

site/README.md
     3→## Getting Started …
    17→## Learn More …
    26→## Deploy on Vercel …

site/components/code.tsx
     8→const theme: PrismTheme = {
   104→export const Code: React.FC<{

site/components/docs-layout.tsx
     5→import { Footer } from './sections/footer';
     6→import Logo from '../assets/logo-small.svg';
     8→const TableItem: React.FC<{
    19→const TableHeader: React.FC<{
    27→export default function DocsLayout({ meta, children }) {

site/components/emoji-button.tsx
     1→export const EmojiButton: React.FC<{

site/components/sections/toast-example.tsx
     7→const examples: Array<{

site/components/sections/toaster-example.tsx
     8→export const positions: Array<ToastPosition> = [

site/next.config.mjs
     5→const withMDX …
    15→const nextConfig = {
    17→  webpack(config) {
    24→  async rewrites() {

site/package.json
     2→  "name …
     3→  "scripts …
     8→  "dependencies …
    25→  "devDependencies …

site/pages/_app.tsx
    12→const components = {

site/pages/index.tsx
    22→const version = packageInfo.version;
   102→export default function Home() {

site/tsconfig.json
     2→  "compilerOptions …
    22→  "include …
    32→  "exclude …

site/types/svg.d.ts
     1→interface SvgrComponent …
     5→  const value: SvgrComponent;

src/components/checkmark.tsx
     1→import { styled, keyframes } from 'goober';
     3→const circleAnimation = keyframes`
    13→const checkmarkAnimation = keyframes`
    29→export interface CheckmarkTheme {
    30→  primary?: string;
    31→  secondary?: string;
    32→}
    34→export const CheckmarkIcon = styled('div')<CheckmarkTheme>`

src/components/error.tsx
     1→import { styled, keyframes } from 'goober';
     3→const circleAnimation = keyframes`
    13→const firstLineAnimation = keyframes`
    23→const secondLineAnimation = keyframes`
    33→export interface ErrorTheme {
    34→  primary?: string;
    35→  secondary?: string;
    36→}
    38→export const ErrorIcon = styled('div')<ErrorTheme>`

src/components/loader.tsx
     1→import { styled, keyframes } from 'goober';
     3→const rotate = keyframes`
    12→export interface LoaderTheme {
    13→  primary?: string;
    14→  secondary?: string;
    15→}
    17→export const LoaderIcon = styled('div')<LoaderTheme>`

src/components/toast-bar.tsx
     1→import * as React from 'react';
     2→import { styled, keyframes } from 'goober';
     4→import { Toast, ToastPosition, resolveValue, Renderable } from '../core/types';
     5→import { ToastIcon } from './toast-icon';
     6→import { prefersReducedMotion } from '../core/utils';
     8→const enterAnimation …
    13→const exitAnimation …
    18→const fadeInAnimation = `0%{opacity:0;} 100%{opacity:1;}`;
    19→const fadeOutAnimation = `0%{opacity:1;} 100%{opacity:0;}`;
    22→const ToastBarBase = styled('div')`
    38→const Message = styled('div')`
    47→interface ToastBarProps {
    48→  toast: Toast;
    49→  position?: ToastPosition;
    50→  style?: React.CSSProperties;
    51→  children?: (components: {
    52→    icon: Renderable;
    53→    message: Renderable;
    54→  }) => Renderable;
    55→}
    57→const getAnimationStyle …
    75→export const ToastBar: React.FC<ToastBarProps> = React.memo(

src/components/toast-icon.tsx
     1→import * as React from 'react';
     2→import { styled, keyframes } from 'goober';
     4→import { Toast } from '../core/types';
     5→import { ErrorIcon, ErrorTheme } from './error';
     6→import { LoaderIcon, LoaderTheme } from './loader';
     7→import { CheckmarkIcon, CheckmarkTheme } from './checkmark';
     9→const StatusWrapper = styled('div')`
    13→const IndicatorWrapper = styled('div')`
    22→const enter = keyframes`
    32→export const AnimatedIconWrapper = styled('div')`
    41→export type IconThemes = Partial<{
    47→export const ToastIcon: React.FC<{
    48→  toast: Toast;
    49→}> = ({ toast }) => {
    50→  const { icon, type, iconTheme } = toast;
    51→  if (icon !== undefined) {
    52→    if (typeof icon === 'string') {
      →…

src/components/toaster.tsx
     1→import { css, setup } from 'goober';
     2→import * as React from 'react';
     3→import {
     4→  resolveValue,
     5→  ToasterProps,
     6→  ToastPosition,
     7→  ToastWrapperProps,
     8→} from '../core/types';
     9→import { useToaster } from '../core/use-toaster';
    10→import { prefersReducedMotion } from '../core/utils';
    11→import { ToastBar } from './toast-bar';
    15→const ToastWrapper …
    47→const getPositionStyle …
    76→const activeClass = css`
    83→const DEFAULT_OFFSET = 16;
    85→export const Toaster: React.FC<ToasterProps> = ({
    86→  reverseOrder,
    87→  position = 'top-center',
    88→  toastOptions,
    89→  gutter,
    90→  children,
      →…

src/core/store.ts
     1→import { useEffect, useState, useRef } from 'react';
     2→import { DefaultToastOptions, Toast, ToastType } from './types …
     4→export const TOAST_EXPIRE_DISMISS_DELAY = 1000;
     5→export const TOAST_LIMIT = 20;
     6→export const DEFAULT_TOASTER_ID = 'default';
     8→interface ToasterSettings {
     9→  toastLimit: number;
    10→}
    12→export enum ActionType {
    13→  ADD_TOAST,
    14→  UPDATE_TOAST,
    15→  UPSERT_TOAST,
    16→  DISMISS_TOAST,
    17→  REMOVE_TOAST,
    18→  START_PAUSE,
    19→  END_PAUSE,
    20→}
    22→export type Action =
    23→  | {
    52→interface ToasterState {
    53→  toasts: Toast[];
    54→  settings: ToasterSettings;
    55→  pausedAt: number | undefined;
    56→}
    58→interface State {
    59→  [toasterId: string]: ToasterState;
    60→}
    62→export const reducer = (state: ToasterState, action: Action): ToasterState => {
   136→const listeners: Array<
   140→const defaultToasterState: ToasterState = {
   149→export const dispatch = (action: Action, toasterId = DEFAULT_TOASTER_ID) => {
   161→export const dispatchAll = (action: Action) =>
   162→  Object.keys(memoryState).forEach((toasterId) => dispatch(action, toasterId));
   164→export const getToasterIdFromToastId = (toastId: string) =>
   165→  Object.keys(memoryState).find((toasterId) =>
   166→    memoryState[toasterId].toasts.some((t) => t.id === toastId)
   167→  );
   169→export const createDispatch =
   170→  (toasterId = DEFAULT_TOASTER_ID) =>
   171→  (action: Action) => {
   175→export const defaultTimeouts: {
   185→export const useStore = (
   186→  toastOptions: DefaultToastOptions = {},
   187→  toasterId: string = DEFAULT_TOASTER_ID
   188→): ToasterState => {

src/core/toast.ts
     1→./types …
    10→import { genId } from './utils …
    11→./store …
    19→type Message = ValueOrFunction<Renderable, Toast>;
    21→type ToastHandler = (message: Message, options?: ToastOptions) => string;
    23→const createToast …
    42→const createHandler …
    55→const toast …

src/core/types.ts
     1→import { CSSProperties } from 'react';
     3→export type ToastType = 'success' | 'error' | 'loading' | 'blank' | 'custom';
     4→export type ToastPosition =
     5→  | 'top-left'
     6→  | 'top-center'
     7→  | 'top-right'
     8→  | 'bottom-left'
     9→  | 'bottom-center'
    10→  | 'bottom-right';
    12→export type Renderable = React.ReactElement | string | null;
    14→export interface IconTheme {
    15→  primary: string;
    16→  secondary: string;
    17→}
    19→export type ValueFunction<TValue, TArg> = (arg: TArg) => TValue;
    20→export type ValueOrFunction<TValue, TArg> =
    21→  | TValue
    22→  | ValueFunction<TValue, TArg>;
    24→const isFunction …
    29→export const resolveValue = <TValue, TArg>(
    30→  valOrFunction: ValueOrFunction<TValue, TArg>,
    31→  arg: TArg
    32→): TValue => (isFunction(valOrFunction) ? valOrFunction(arg) : valOrFunction);
    34→export interface Toast {
    35→  type: ToastType;
    36→  id: string;
    37→  toasterId?: string;
    38→  message: ValueOrFunction<Renderable, Toast>;
    39→  icon?: Renderable;
    40→  duration?: number;
    41→  pauseDuration: number;
    42→  position?: ToastPosition;
    43→  removeDelay?: number;
    44→
    45→  ariaProps: {
    46→    role: 'status' | 'alert';
    47→    'aria-live': 'assertive' | 'off' | 'polite';
    48→  };
    49→
    50→  style?: CSSProperties;
    51→  className?: string;
    52→  iconTheme?: IconTheme;
    53→
    54→  createdAt: number;
    55→  visible: boolean;
    56→  dismissed: boolean;
    57→  height?: number;
    58→}
    60→export type ToastOptions = Partial<
    61→  Pick<
    62→    Toast,
    63→    | 'id'
    64→    | 'icon'
    65→    | 'duration'
    66→    | 'ariaProps'
    67→    | 'className'
    68→    | 'style'
    69→    | 'position'
    70→    | 'iconTheme'
    71→    | 'toasterId'
    72→    | 'removeDelay'
    73→  >
    74→>;
    76→export type DefaultToastOptions = ToastOptions & {
    80→export interface ToasterProps {
    81→  position?: ToastPosition;
    82→  toastOptions?: DefaultToastOptions;
    83→  reverseOrder?: boolean;
    84→  gutter?: number;
    85→  containerStyle?: React.CSSProperties;
    86→  containerClassName?: string;
    87→  toasterId?: string;
    88→  children?: (toast: Toast) => React.ReactElement;
    89→}
    91→export interface ToastWrapperProps {
    92→  id: string;
    93→  className?: string;
    94→  style?: React.CSSProperties;
    95→  onHeightUpdate: (id: string, height: number) => void;
    96→  children?: React.ReactNode;
    97→}

src/core/use-toaster.ts
     1→import { useEffect, useCallback, useRef } from 'react';
     2→import { createDispatch, ActionType, useStore, dispatch } from './store …
     3→import { toast } from './toast …
     4→import { DefaultToastOptions, Toast, ToastPosition } from './types …
     6→export const REMOVE_DELAY = 1000;
     8→export const useToaster = (
     9→  toastOptions?: DefaultToastOptions,
    10→  toasterId: string = 'default'
    11→) => {

src/core/utils.ts
     1→export const genId = (() => {
     8→export const prefersReducedMotion = (() => {

src/headless/index.ts
     1→import { toast } from '../core/toast';

src/index.ts
     1→import { toast } from './core/toast';

test/setup.ts
     1→import '@testing-library/jest-dom';

test/toast.test.tsx
    10→import toast, { resolveValue, Toaster, ToastIcon } from '../src';
    11→import { defaultTimeouts } from '../src/core/store';
    12→import { REMOVE_DELAY } from '../src/core/use-toaster';
    29→const waitTime = (time: number) => {
    35→const TOAST_DURATION = 1000;

tsconfig.json
     3→  "include": ["src", "types", "test"],
     4→  "compilerOptions": {
    32→  }
    33→}

tsup.config.ts
     1→import { defineConfig, Options } from 'tsup';
     2→import { minifyTemplates, writeFiles } from 'esbuild-minify-templates';
     4→const commonConfig: Options = {
