tests/snapshots/snapshots__budget_react_hot_toast_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (484 words)

README.md
    28→## Features
    30→- 🔥 **Hot by default**
    31→- 🔩 **Easily Customizable**
      →…
    37→## Installation
    39→#### With pnpm
    41→```sh
    42→pnpm add react-hot-toast
    43→```
    44→
    45→#### With NPM
    47→```sh
    48→npm install react-hot-toast
      →…
    51→## Getting Started
    53→Add the Toaster to your app first. It will take care of rendering all notifications emitted. Now you can trigger `toast()` from anywhere!
    54→
      →…
    70→## Documentation
    72→Find the full API reference on [official documentation](https://react-hot-toast.com/docs).
site/README.md
     3→## Getting Started
     5→First, run the development server:
     6→
      →…
    17→## Learn More
    19→To learn more about Next.js, take a look at the following resources:
    20→
      →…
    26→## Deploy on Vercel
    28→The easiest way to deploy your Next.js app is to use the [Vercel Platform](https://vercel.com/import?utm_medium=default-template&filter=next.js&utm_source=create-next-app&utm_campaign=create-next-app-readme) from the creators of Next.js.
    29→
      →…
site/components/code.tsx
     8→const theme: PrismTheme = {
   104→export const Code: React.FC<{
site/components/docs-layout.tsx
     8→const TableItem: React.FC<{
    19→const TableHeader: React.FC<{
    27→export default function DocsLayout({ meta, children }) {
site/components/emoji-button.tsx
     1→export const EmojiButton: React.FC<{
site/components/sections/footer.tsx
     4→export function Footer …
site/components/sections/splitbee-counter.tsx
     4→export const useSplitbeeCount …
    36→export const SplitbeeCounter …
site/components/sections/toast-example.tsx
     7→const examples: Array<{
   270→export const ToastExample …
site/components/sections/toaster-example.tsx
     8→export const positions: Array<ToastPosition> = [
     9→  'top-left',
    10→  'top-center',
    11→  'top-right',
    12→  'bottom-left',
      →…
    17→export const ToasterExample …
site/next.config.mjs
     5→const withMDX = nextMdx({
    14→/** @type {import('next').NextConfig} */
    15→const nextConfig = {
    16→  pageExtensions: ['ts', 'tsx', 'md', 'mdx'],
    17→  webpack(config) {
    18→    config.module.rules.push({
    24→  async rewrites() {
    25→    return [
      →…
site/pages/_app.tsx
    12→const components = {
site/pages/index.tsx
    22→const version = packageInfo.version;
   102→export default function Home() {
   103→  const [position, setPosition] = useState<ToastPosition>('top-center');
      →…
site/types/svg.d.ts
     1→interface SvgrComponent
     2→  extends React.StatelessComponent<React.SVGAttributes<SVGElement>> {}
     5→  const value: SvgrComponent;
src/components/checkmark.tsx
    29→export interface CheckmarkTheme {
    30→  primary?: string;
    31→  secondary?: string;
    32→}
    34→export const CheckmarkIcon = styled('div')<CheckmarkTheme>`
src/components/error.tsx
    33→export interface ErrorTheme {
    34→  primary?: string;
    35→  secondary?: string;
    36→}
    38→export const ErrorIcon = styled('div')<ErrorTheme>`
src/components/loader.tsx
    12→export interface LoaderTheme {
    13→  primary?: string;
    14→  secondary?: string;
    15→}
    17→export const LoaderIcon = styled('div')<LoaderTheme>`
src/components/toast-bar.tsx
    47→interface ToastBarProps {
    48→  toast: Toast;
    49→  position?: ToastPosition;
    50→  style?: React.CSSProperties;
      →…
    75→export const ToastBar: React.FC<ToastBarProps> = React.memo(
src/components/toast-icon.tsx
    32→export const AnimatedIconWrapper = styled('div')`
    41→export type IconThemes = Partial<{
    42→  success: CheckmarkTheme;
    43→  error: ErrorTheme;
    44→  loading: LoaderTheme;
    45→}>;
    47→export const ToastIcon: React.FC<{
    48→  toast: Toast;
      →…
src/components/toaster.tsx
    85→export const Toaster: React.FC<ToasterProps> = ({
    86→  reverseOrder,
      →…
src/core/store.ts
     8→interface ToasterSettings {
    12→export enum ActionType {
    13→  ADD_TOAST,
      →…
    52→interface ToasterState {
    58→interface State {
    62→export const reducer …
   136→const listeners …
   140→const defaultToasterState …
   149→export const dispatch …
   161→export const dispatchAll …
   164→export const getToasterIdFromToastId …
   169→export const createDispatch …
   185→export const useStore …
src/core/toast.ts
    19→type Message …
    21→type ToastHandler …
    23→const createToast …
    42→const createHandler …
    55→const toast …
src/core/types.ts
    14→export interface IconTheme {
    15→  primary: string;
      →…
    24→const isFunction …
    29→export const resolveValue …
    34→export interface Toast {
    35→  type: ToastType;
      →…
    80→export interface ToasterProps {
    81→  position?: ToastPosition;
      →…
    91→export interface ToastWrapperProps {
    92→  id: string;
      →…
src/core/use-toaster.ts
     8→export const useToaster …
tsup.config.ts
     4→const commonConfig: Options = {
