tests/snapshots/snapshots__budget_react_hot_toast_components_subdir1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 10 → level 0 (6 words)

checkmark.tsx
error.tsx
loader.tsx
toast-bar.tsx
toast-icon.tsx
toaster.tsx
