tests/snapshots/snapshots__budget_react_hot_toast_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 5 → level 0 (13 words)

components/checkmark.tsx
components/error.tsx
components/loader.tsx
components/toast-bar.tsx
components/toast-icon.tsx
components/toaster.tsx
core/store.ts
core/toast.ts
core/types.ts
core/use-toaster.ts
core/utils.ts
headless/index.ts
index.ts
